open-policy-agent/authentication-user-management/oauth-secured-identity-providers-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sOauthOpenIDConnectIdentityProvidersOnly
metadata:
  name: oauth-openid-connect-identity-providers-only
spec:
  match:
    kinds:
      - apiGroups: ["config.openshift.io"]
        kinds: ["OAuth"]
  parameters:
    approvedProviders: ["OpenID"]
